tests/integration/text_document/snapshots/integration__text_document__completion__import_class_open_brace.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 684
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\documentclass{art \\foo\n%CUR                 ^\n%1.1                ^^^\"#)?"
---
[
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "article",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "article"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "articleingud",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "articleingud"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "articoletteracdp",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "articoletteracdp"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "artikel1",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "artikel1"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "artikel2",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "artikel2"
    }
  }
]
