tests/integration/text_document/snapshots/integration__text_document__completion__theorem_end.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 790
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\newtheorem{lemma}{Lemma}\n%SRC \\begin{}\n%SRC \\end{lem\n%CUR       ^\n%1.1      ^^^\"#)?"
---
[
  {
    "data": "[data]",
    "detail": "user-defined",
    "kind": 1,
    "label": "lemma",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "lemma"
    }
  }
]
