tests/integration/text_document/snapshots/integration__text_document__completion__tikz_library_closed_brace.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 817
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\usepgflibrary{}\n%CUR                ^\"#)?"
---
[
  {
    "data": "[data]",
    "kind": 1,
    "label": "arrows",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "arrows"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "arrows.meta",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "arrows.meta"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "arrows.spaced",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "arrows.spaced"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "curvilinear",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "curvilinear"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "datavisualization.barcharts",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "datavisualization.barcharts"
    }
  }
]
